Backend funcional del segundo sprint